--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
     <div class="stars"></div>
     <div class="container">
-        <div class="glitch-text">You Have Been Hacked By ( (Abu bakheet) (Y5) SCOFIELD TEAM ITS HERE )</div>
+        <div class="glitch-text">You Have Been Hacked By ( (Abu bakheet) SCOFIELD TEAM ITS HERE )</div>
         <br>
         <div class="image-frame">
             <img src="https://s5.ezgif.com/tmp/ezgif-50f3ca4fa94469.gif
@@ -90,7 +90,6 @@
         </div>
         <br>
         <div id="ip-info"></div>
-        <div class="discord-text">Discord: 3MAd2guswu</div> <!-- تكبير الخط -->
     </div>
 
     <!-- تشغيل الأغنية تلقائيًا -->
